Added controls for managing roles.

--- a/authentication/authentication-internal-service/src/test/resources/application.properties
+++ b/authentication/authentication-internal-service/src/test/resources/application.properties
@@ -284,3 +284,9 @@ mosip.kernel.otp.default-length=6
 
 ida.sign.refid=ida
 ida.sign.applicationid=ida
+
+
+mosip.role.idauth.postauth=RESIDENT,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,REGISTRATION_PROCESSOR
+mosip.role.idauth.postverifyidentity=RESIDENT,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,REGISTRATION_PROCESSOR
+mosip.role.idauth.getauthtransactionsindividualid=RESIDENT
+mosip.role.idauth.postotp=RESIDENT
