[MOSIP-17776] reverted application order

--- a/authentication/authentication-internal-service/src/main/resources/bootstrap.properties
+++ b/authentication/authentication-internal-service/src/main/resources/bootstrap.properties
@@ -1,20 +1,20 @@
 
 # Application name - the name appended at starting of file name to differentiate
 # between different property files for different microservices
-spring.application.name=id-authentication-internal,id-authentication
+spring.application.name=id-authentication,id-authentication-internal
  
 #Active Profile - will relate to development properties file in the server.
 #If this property is absent then default profile will be activated which is
 #the property file without any environment name at the end. 
-spring.profiles.active=dev
+spring.profiles.active=mz
 
 
 # defining current branch in which we are working as label
-spring.cloud.config.label=master
+spring.cloud.config.label=develop
  
 
 # url where spring cloud config server is running 
-spring.cloud.config.uri=localhost
+spring.cloud.config.uri=https://dev.mosip.net/config
 
  
 #management.security.enabled=false
