[MOSIP-17776] reverted bootstrap changes

--- a/authentication/authentication-internal-service/src/main/resources/bootstrap.properties
+++ b/authentication/authentication-internal-service/src/main/resources/bootstrap.properties
@@ -6,15 +6,15 @@ spring.application.name=id-authentication,id-authentication-internal
 #Active Profile - will relate to development properties file in the server.
 #If this property is absent then default profile will be activated which is
 #the property file without any environment name at the end. 
-spring.profiles.active=mz
+spring.profiles.active=dev
 
 
 # defining current branch in which we are working as label
-spring.cloud.config.label=develop
+spring.cloud.config.label=master
  
 
 # url where spring cloud config server is running 
-spring.cloud.config.uri=https://dev.mosip.net/config
+spring.cloud.config.uri=localhost
 
  
 #management.security.enabled=false
