MOSIP-18085: Upgraded swagger2 to openapi3 for Id Authentication Internal Service
Resolved conflict

--- a/authentication/authentication-internal-service/src/main/resources/bootstrap.properties
+++ b/authentication/authentication-internal-service/src/main/resources/bootstrap.properties
@@ -37,3 +37,15 @@ server.servlet.context-path=/idauthentication/${ida.api.version}/internal
 mosip.kernel.keymanager.certificate-file-path=classpath:cert/mosipio.crt
 mosip.kernel.keymanager.privatekey-file-path=classpath:cert/mosipio.key
 mosip.kernel.keymanager.certificate-type=X509
+
+openapi.info.title=Id Authentication Internal Service
+openapi.info.description=Id Authentication Internal Service
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+mosipbox.public.url=http://localhost:${server.port}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.context-path}
+openapi.service.servers[0].description=Id Authentication Internal Service
+openapi.group.name=${openapi.info.title}
+openapi.group.paths[0]=/**
+springdoc.swagger-ui.disable-swagger-default-url=true
