--- a/authentication/authentication-otp-service/src/main/resources/bootstrap.properties
+++ b/authentication/authentication-otp-service/src/main/resources/bootstrap.properties
@@ -49,3 +49,5 @@ openapi.service.servers[0].description=Id Authentication OTP Service
 openapi.group.name=${openapi.info.title}
 openapi.group.paths[0]=/**
 springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.operationsSorter=alpha
