Excluded kernel core from kernel logger

--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -197,6 +197,10 @@
 						spring-boot-starter-security
 					</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>io.mosip.kernel</groupId>
+					<artifactId>kernel-core</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
