KycFacadeImplTest class test cases updated

--- a/authentication/authentication-service/src/test/resources/application.properties
+++ b/authentication/authentication-service/src/test/resources/application.properties
@@ -239,7 +239,7 @@ id-masterdata-title-service.rest.headers.mediaType=application/json
 id-masterdata-title-service.rest.timeout=100
 
 #------ Static Token Configuration ---------------
-static.token.enable=false
+static.token.enable=true
 
 # -----------------AuthType Enable----------------------
 auth.types.allowed=demo,otp,bio,bio-Face,bio-Finger,bio-Iris,FMR
