[MOSIP-18119] Fixed test case failures

--- a/authentication/authentication-common/src/test/resources/application.properties
+++ b/authentication/authentication-common/src/test/resources/application.properties
@@ -1,3 +1,4 @@
+mosip.notification.timezone=GMT+05:30
 # ********** Common Properties ****************
 server.port = 8081
 server.servlet.context-path = /ida/v0.1
