--- a/db_scripts/mosip_ida/mosip_ida_deploy.properties
+++ b/db_scripts/mosip_ida/mosip_ida_deploy.properties
@@ -3,7 +3,7 @@ DB_PORT=9001
 SU_USER=postgres
 SU_USER_PWD=
 DEFAULT_DB_NAME=postgres
-MOSIP_DB_NAME=mosip_ida
+MOSIP_DB_NAME=mosip_ida_1
 SYSADMIN_USER=sysadmin
 SYSADMIN_PWD=Mosipadm@dev123
 DBADMIN_PWD=Mosipadm@dev123
