--- a/authentication/authentication-internal-service/Dockerfile
+++ b/authentication/authentication-internal-service/Dockerfile
@@ -66,10 +66,10 @@ CMD if [ "$is_glowroot_env" = "present" ]; then \
     rm -rf glowroot.zip ; \
     sed -i "s/<service_name>/${current_module_env}/g" glowroot/glowroot.properties ; \
     wget "${iam_adapter_url_env}" -O kernel-auth-adapter.jar; \
-    java -jar -Djava.security.debug=sunpkcs11 -javaagent:glowroot/glowroot.jar -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path="${loader_path_env}",./kernel-auth-adapter.jar -Dfile.encoding="UTF-8" ${current_module_env}.jar ; \
+    java -jar -Djava.security.debug=sunpkcs11 -javaagent:glowroot/glowroot.jar -Dlog4j2.formatMsgNoLookups=true -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path="${loader_path_env}",./kernel-auth-adapter.jar -Dfile.encoding="UTF-8" ${current_module_env}.jar ; \
     else \
     wget "${iam_adapter_url_env}" -O kernel-auth-adapter.jar; \
-    java -jar -Djava.security.debug=sunpkcs11 -Dspring.cloud.config.label="${spring_config_label_env}" -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path="${loader_path_env}",./kernel-auth-adapter.jar -Dfile.encoding="UTF-8" ${current_module_env}.jar ; \
+    java -jar -Djava.security.debug=sunpkcs11 -Dspring.cloud.config.label="${spring_config_label_env}" -Dlog4j2.formatMsgNoLookups=true -Dspring.profiles.active="${active_profile_env}" -Dspring.cloud.config.uri="${spring_config_url_env}" -Dloader.path="${loader_path_env}",./kernel-auth-adapter.jar -Dfile.encoding="UTF-8" ${current_module_env}.jar ; \
     fi
 
 #Sample docker run command:
