--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Build with Maven
       run: |
         cd authentication
-        mvn -B package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
+        mvn -B clean package -s $GITHUB_WORKSPACE/settings.xml --file pom.xml
     
     - name: Ready the springboot artifacts
       run: find -name '*.jar' -executable -type f  -exec zip release.zip {} +
