MOSIP-18085: Generated openapi.json for IDA- Authentication Service

--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -148,4 +148,97 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>openapi-doc-generate-profile</id>
+			<dependencies>
+				<dependency>
+					<groupId>io.mosip.kernel</groupId>
+					<artifactId>kernel-auth-adapter</artifactId>
+					<version>1.2.0-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>io.mosip.authentication</groupId>
+					<artifactId>authentication-childauthfilter-impl</artifactId>
+					<version>1.2.0-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>io.mosip.biosdk</groupId>
+					<artifactId>biosdk-client</artifactId>
+					<version>1.2.0-SNAPSHOT</version>
+				</dependency>
+				<dependency>
+					<groupId>io.mosip.demosdk</groupId>
+					<artifactId>demosdk-client</artifactId>
+					<version>1.2.0-SNAPSHOT</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+						<plugin>
+							<groupId>org.springframework.boot</groupId>
+							<artifactId>spring-boot-maven-plugin</artifactId>
+							<version>${spring.boot.version}</version>
+							<configuration>
+								<executable>true</executable>
+								<layout>ZIP</layout>
+								<wait>1000</wait>
+								<maxAttempts>180</maxAttempts>
+							</configuration>
+							<executions>
+								<execution>
+									<id>pre-integration-test</id>
+									<goals>
+										<goal>start</goal>
+									</goals>
+									<configuration>
+										<folders>
+											<folder>src/test/resources</folder>
+										</folders>
+										<profiles>
+											<profile>openapi-profile</profile>
+										</profiles>
+										<arguments>
+											<argument>--server.port=8090</argument>
+											<argument>--server.servlet.context-path=/app/generic</argument>
+										</arguments>
+									</configuration>
+								</execution>
+								<execution>
+									<id>post-integration-test</id>
+									<goals>
+										<goal>stop</goal>
+									</goals>
+								</execution>
+								<execution>
+									<goals>
+										<goal>build-info</goal>
+										<goal>repackage</goal>
+									</goals>
+								</execution>
+							</executions>
+						</plugin>
+						<plugin>
+							<groupId>org.springdoc</groupId>
+							<artifactId>springdoc-openapi-maven-plugin</artifactId>
+							<version>0.2</version>
+							<executions>
+								<execution>
+									<id>integration-test</id>
+									<goals>
+										<goal>generate</goal>
+									</goals>
+								</execution>
+							</executions>
+							<configuration>
+								<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs/Id%20Authentication%20Service</apiDocsUrl>
+								<outputFileName>openapi.json</outputFileName>
+								<outputDir>${project.build.directory}</outputDir>
+								<skip>false</skip>
+							</configuration>
+						</plugin>
+					</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
