MOSIP-15286 changed openapi.json name

--- a/authentication/authentication-service/src/test/resources/application.properties
+++ b/authentication/authentication-service/src/test/resources/application.properties
@@ -616,3 +616,6 @@ openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.context-pa
 openapi.service.servers[0].description=Id Authentication Service
 openapi.group.name=${openapi.info.title}
 openapi.group.paths[0]=/**
+ida-websub-masterdata-templates-callback-relative-url=
+ida-websub-masterdata-titles-callback-relative-url=
+ida-websub-ca-cert-callback-relative-url=
