--- a/authentication/authentication-internal-service/pom.xml
+++ b/authentication/authentication-internal-service/pom.xml
@@ -222,7 +222,7 @@
 						<configuration>
 							<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs/Id%20Authentication%20Internal%20Service
 							</apiDocsUrl>
-							<outputFileName>openapi.json</outputFileName>
+							<outputFileName>${name}-openapi.json</outputFileName>
 							<outputDir>${project.build.directory}</outputDir>
 							<skip>false</skip>
 						</configuration>
