MOSIP-15286 changed openapi.json name

--- a/authentication/authentication-otp-service/src/test/resources/application.properties
+++ b/authentication/authentication-otp-service/src/test/resources/application.properties
@@ -728,4 +728,6 @@ auth.server.admin.issuer.uri=${mosipbox.public.url}/keycloak/auth/realms/
 mosip.service-context=${server.servlet.context-path}
 mosip.service.end-points=/**/*
 mosip.service.exclude.auth.allowed.method=GET,POST
-
+ida-websub-masterdata-templates-callback-relative-url=
+ida-websub-masterdata-titles-callback-relative-url=
+ida-websub-ca-cert-callback-relative-url=
