--- a/authentication/authentication-otp-service/pom.xml
+++ b/authentication/authentication-otp-service/pom.xml
@@ -118,6 +118,8 @@
 						<configuration>
 							<executable>true</executable>
 							<layout>ZIP</layout>
+							<wait>1000</wait>
+							<maxAttempts>180</maxAttempts>
 						</configuration>
 						<executions>
 							<execution>
@@ -167,7 +169,7 @@
 						<configuration>
 							<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs/Id%20Authentication%20OTP%20Service
 							</apiDocsUrl>
-							<outputFileName>openapi.json</outputFileName>
+							<outputFileName>${name}-openapi.json</outputFileName>
 							<outputDir>${project.build.directory}</outputDir>
 							<skip>false</skip>
 						</configuration>
